# ztb

./: .env.example  .gitignore  .pre-commit-config.yaml  .venv  CHANGELOG.md  ENGINEERING.md  LICENSE  ORG.md  PRODUCT.md  README.md  SOUL.md  go-live-checklist.md  lessons-learned.md  opportunities-registry.md  pyproject.toml  requirements.txt  risk-thresholds.json
.github/: CODEOWNERS
agents/: head-of-engineering.md  head-of-operations.md  head-of-research.md  head-of-validation-and-risk.md  managing-director.md  market-analyst.md  ops-engineer.md  platform-engineer.md  strategy-engineer.md  validation-engineer.md
docs/: ab-scorecard-m5-risk.md  contract-ZTB-2250.md  contract-ZTB-3541.md  contract-ZTB-3682.md  contract-ztb-2628-inert-demo-fix.md  data_layer.md  engine.md  m6_execution.md  release-process.md  risk-module.md
ops/: skill_maint.js
patches/: README.md  deploy.sh
scripts/: cost-guard.js  cost-report.js  drift-scan.js  release-audit.js  secret-scan.py  ztb-ci-strategy-validate.py  ztb-evidence-gate-check.py  ztb-vr-pass-bridge.py
tests/: conftest.py  test_backtest.py  test_bybit_rest.py  test_cache.py  test_cli.py  test_cli_data.py  test_cli_hardening.py  test_cli_m2.py  test_cli_smoke_test.py  test_concurrent_db.py  test_config.py  test_daily_loss_limit.py  test_dashboard.py  test_dashboard_live.py  test_dual_db.py  test_evidence_gate_check.py  test_execution_adapter.py  test_execution_bybit_client.py  test_execution_cli.py  test_execution_errors.py  test_execution_executor.py  test_execution_health.py  test_execution_idempotency.py  test_execution_models.py  test_execution_preflight.py  test_execution_reconcile.py  test_execution_store.py  test_executor_leverage.py  test_forwardtest.py  test_forwardtest_store.py  test_ft_decay.py  test_indicators.py  test_integration_m3.py  test_integration_m7.py  test_integrity.py  test_killswitch_durability.py  test_killswitch_m7.py  (+51 more)
(+109 files in other folders)
