[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ztb"
dynamic = ["version"]
description = "Zero Alpha's single, reusable, deterministic trading-bot platform for Bybit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["trading", "backtesting", "bybit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.26",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "pandas-stubs>=2.0",
]
dashboard = [
    "streamlit>=1.28",
]

[project.urls]
Homepage = "https://github.com/zero-alpha/ztb"

[project.scripts]
ztb = "ztb.cli:main"

[tool.setuptools.dynamic]
version = {attr = "ztb.__version__"}

[tool.setuptools.packages.find]
include = ["ztb*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.coverage.run]
omit = ["ztb/dashboard/app.py", "ztb/dashboard/components.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=ztb --cov-report=term-missing"
markers = [
    "network: marks tests that make live API calls (opt-in only; excluded from default run)",
]
